[gd_scene load_steps=5 format=2]

[ext_resource path="res://bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/effects/BlueCannonBall.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/effects/laser_short.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.43841

[node name="Bullet" type="Area2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.405685, 0.434812 )
scale = Vector2( 0.90638, 0.902219 )
rect = Rect2( -8, -8, 15, 15 )

[node name="ShootingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.402
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_collision"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
